--- a/workflow-templates/demo.yml
+++ b/workflow-templates/demo.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run a one-line script
-        run: echo "Modello di Workflow dimostrativo. Il branch di default è: " $default-branch
+        run: echo "Modello di Workflow dimostrativo. Il branch di default è " $default-branch
